# Scanner

./: .env.example  .gitignore  .replit  CLAUDE.md  OPTIMIZATION_COMPLETE_GUIDE.md  README.md  TENNIS_INTELLIGENCE_README.md  ai_brains.py  app_config.py  automated_loading_system.py  backtest.py  comprehensive_test.py  constants.py  crypto_main.py  crypto_scanner.py  database_migration.sql  discord_scraper.py  enhanced_scraping.py  failed9_indicator.pine  feature_engineering.py  fix_database.sql  liquidity_sweep_indicator.pine  live_odds_fetcher.py  main.py  matchup_table_generator.py  migrate_database.py  ml_models.py  nba_matchup_analyzer.py  optimized_totals_app.py  parallel_fetcher.py  pyproject.toml  replit.md  requirements.txt  rlm_detector.py  rotowire_integration.py  rotowire_qualification.py  scoresandodds_enhanced.py  sofi_december_2025.csv  sofi_november_2025.csv  sports_app.py  (+19 more)
.claude/: settings.local.json
additional_tools/: backhandtl-reverse-engineer.py  backhandtl_complete_extractor.py  backhandtl_extractor.py  backhandtl_full_clone_extractor.py  backhandtl_quick_clone.py  tennis-automation-job.md  tennis-daily-automation.sh  test-tennis-engine.py
attached_assets/: FINAL_STATUS_COMPLETE_1768417955124.md  MISSING_PIECES_FINAL_1768417336860.md  Pasted--ADD-Structured-logging-with-context-import-logging-han_1768358286781.txt  Pasted--BULLETPROOF-CURRENT-LINES-SYSTEM-NO-HISTORICAL-ODDS-AP_1768204372180.txt  Pasted--BULLETPROOF-PICK-QUALIFICATION-WITH-ROTOWIRE-INTEGRATI_1768406178667.txt  Pasted--CRITICAL-DATABASE-1768436190987_1768436190990.txt  (+116 more)
(+507 files in other folders)
