[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cached-property>=2.0.1",
    "coinbase-advanced-py>=1.8.2",
    "cryptography>=46.0.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.5",
    "tradingview-datafeed>=2.1.1",
]
